# monitoring_system

./: .clang-tidy  .cppcheck  .gitignore  ARCHITECTURE.md  BASELINE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPENDENCY_IMPROVEMENT_SRD.md  DOC_REVIEW_REPORT.md  Doxyfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_KO.md  IMPROVEMENTS.md  IMPROVEMENTS_KO.md  IMPROVEMENT_PLAN.md  INTEGRATION.md  LICENSE-THIRD-PARTY  MIGRATION.md  MONITORING_SYSTEM_DESIGN.md  PHASE5_VALIDATION_REPORT.md  README.kr.md  README.md  README_8md.html  README_KO.md  SECURITY.md  STRUCTURE.md  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2alert_2alert_config_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2alert_2alert_manager_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2alert_2alert_notifiers_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2alert_2alert_pipeline_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2alert_2alert_rule_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2alert_2alert_triggers_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2core_2event_bus_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2core_2event_types_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2core_2performance_monitor_8h-example.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2interfa08b226b096fa0f6656c06399ef68f616.html  _2home_2runner_2work_2monitoring_system_2monitoring_system_2include_2kcenon_2monitoring_2interfa2efde646667c84cb7867746b38659936.html  (+7937 more)
benchmarks/: BASELINE.md  CMakeLists.txt  README.md  adaptive_monitor_bench.cpp  collector_overhead_bench.cpp  core_metrics_bench.cpp  event_bus_bench.cpp  main_bench.cpp  metric_collection_bench.cpp
docs/: ARCHITECTURE.md  (+74 more)
examples/: CMakeLists.txt  TUTORIAL.md  alert_notifiers_example.cpp  alert_pipeline_example.cpp  alert_triggers_example.cpp  basic_monitoring_example.cpp  bidirectional_di_example.cpp  collector_factory_example.cpp  custom_metric_types_example.cpp  distributed_tracing_example.cpp  event_bus_example.cpp  facade_adapter_poc.cpp  graceful_degradation_example.cpp  health_reliability_example.cpp  logger_di_integration_example.cpp  monitor_factory_pattern_example.cpp  multi_service_tracing_example.cpp  otlp_export_example.cpp  platform_metrics_example.cpp  plugin_collector_example.cpp  production_monitoring_example.cpp  result_pattern_example.cpp  storage_example.cpp  system_collectors_example.cpp  time_series_storage_example.cpp
examples/plugin_example/: CMakeLists.txt  README.md  example_plugin.cpp  plugin_loader_example.cpp
integration_tests/: CMakeLists.txt  README.md
integration_tests/failures/: error_handling_test.cpp
integration_tests/framework/: system_fixture.h  test_helpers.h
integration_tests/performance/: monitoring_performance_test.cpp
integration_tests/scenarios/: metrics_collection_test.cpp  monitoring_integration_test.cpp
integration_tests/vcpkg_consumer/: CMakeLists.txt  main.cpp
samples/: CMakeLists.txt  basic_monitoring.cpp
samples/crash_protection/: main.cpp
sources/: CMakeLists.txt
sources/alerting/: alert_deduplication.h  notification_manager.h
sources/compatibility/: cpp_compatibility.h
sources/interfaces/: multi_process_monitoring_interface.h
sources/monitoring/: monitoring.cpp  monitoring.h  multi_process_monitoring.cpp  multi_process_monitoring.h  optimized_storage.cpp  performance_optimizer.cpp
sources/monitoring/adapters/: logger_system_adapter.h  thread_system_adapter.h
sources/monitoring/adaptive/: adaptive_monitor.cpp  adaptive_monitor.h
sources/monitoring/context/: thread_context.cpp  thread_context.h
sources/monitoring/core/: error_codes.h  result_types.h
sources/monitoring/di/: lightweight_container.h  service_container_interface.h  thread_system_container_adapter.h
sources/monitoring/export/: metric_exporters.h  opentelemetry_adapter.h
sources/monitoring/health/: health_monitor.cpp  health_monitor.h
sources/monitoring/interfaces/: monitoring_interface.h
sources/monitoring/optimization/: lockfree_queue.h  memory_pool.h  simd_aggregator.h
sources/monitoring/performance/: performance_monitor.cpp  performance_monitor.h
sources/monitoring/query/: metric_query_engine.h
sources/monitoring/reliability/: circuit_breaker.h  data_consistency.h  error_boundary.h  fault_tolerance_manager.h  graceful_degradation.h  resource_manager.h  retry_policy.h
sources/web/: dashboard_server.h  metric_api.h
tests/: CMakeLists.txt  test_adapter_functionality.cpp  test_adaptive_monitoring.cpp  test_alert_manager.cpp  test_alert_triggers.cpp  test_alert_types.cpp  test_battery_collector.cpp  test_buffering_strategies.cpp  test_collector_registry.cpp  test_collector_registry_integration.cpp  test_container_collector.cpp  test_container_plugin.cpp  test_context_switch_collector.cpp  test_cross_system_integration.cpp  test_data_consistency.cpp  test_di_container.cpp  test_distributed_tracing.cpp  test_error_boundaries.cpp  test_event_bus.cpp  test_fault_tolerance.cpp  test_fd_collector.cpp  test_gpu_collector.cpp  test_health_monitoring.cpp  test_hot_path_helper.cpp  test_inode_collector.cpp  test_integration_e2e.cpp  test_interfaces_compile.cpp  test_interrupt_collector.cpp  test_lock_free_collector.cpp  test_metric_exporters.cpp  test_metric_factory.cpp  test_metric_storage.cpp  test_metrics_provider.cpp  test_monitorable_interface.cpp  test_network_metrics_collector.cpp  test_opentelemetry_adapter.cpp  test_optimization.cpp  test_performance_monitoring.cpp  test_platform_metrics_collector.cpp  test_power_collector.cpp  (+22 more)
(+9118 files in other folders)
